Replaced static Boolean references with instantiations.