@@ -77,11 +77,11 @@ public class NotificationForwarderObject extends BACnetObject {
         // Set up object properties.
         writePropertyInternal(PropertyIdentifier.statusFlags, new StatusFlags(false, false, false, false));
         writePropertyInternal(PropertyIdentifier.reliability, Reliability.noFaultDetected);
-        writePropertyInternal(PropertyIdentifier.outOfService, Boolean.valueOf(outOfService));
+        writePropertyInternal(PropertyIdentifier.outOfService, new Boolean(outOfService));
         writePropertyInternal(PropertyIdentifier.processIdentifierFilter, processIdentifierFilter);
         writePropertyInternal(PropertyIdentifier.portFilter, portFilter);
-        writePropertyInternal(PropertyIdentifier.localForwardingOnly, Boolean.valueOf(localForwardingOnly));
-        writePropertyInternal(PropertyIdentifier.reliabilityEvaluationInhibit, Boolean.FALSE);
+        writePropertyInternal(PropertyIdentifier.localForwardingOnly, new Boolean(localForwardingOnly));
+        writePropertyInternal(PropertyIdentifier.reliabilityEvaluationInhibit, new Boolean(false));
 
         addMixin(new HasStatusFlagsMixin(this));
         addMixin(new SubscriptionManagementMixin(this));
@@ -196,7 +196,6 @@ public class NotificationForwarderObject extends BACnetObject {
             }
         };
         localDevice.getEventHandler().addListener(eventListener);
-
     }
 
     private void sendNotification(final UnsignedInteger processIdentifier,
